--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -37,7 +37,7 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 #exec-once = swayidle -w timeout 60 "swaylock -f -i ~/Pictures/glass.jpg"
 
 exec-once = swww init
-exec-once = swww img ~/Pictures/glass.jpg 
+exec-once = swww img ~/Pictures/wall/glass.jpg 
 #---------------------------------------------------------------------------------------
 
 
@@ -261,11 +261,11 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, W, exec, chromium --force-dark-mode
-
+bind = $mainMod, G, exec, github-desktop
 
 # System
 bind = $mainMod, C, killactive, 
-bind = $mainMod, L, exec, swaylock -i ~/Pictures/glass.jpg
+bind = $mainMod, L, exec, swaylock -i ~/Pictures/wall/glass.jpg
 bind = $mainMod, M, exec, wlogout 
 
 # Tiling
