--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -278,7 +278,7 @@ bind = $mainMod, A, exec, alacritty -e sh -c "alsamixer"
 
 # Modes
 bind = , XF86Calculator, exec, alacritty -e xrandr --output DP-1 --primary --mode 2560x1440 --rate 144
-bind = $mainMod Shift, G, exec, ~/.config/hypr/gamemode.sh
+#bind = $mainMod Shift, G, exec, ~/.config/hypr/gamemode.sh
 #---------------------------------------------------------------------------------------
 
 
