--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -37,7 +37,7 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 #exec-once = swayidle -w timeout 60 "swaylock -f -i ~/Pictures/glass.jpg"
 
 exec-once = swww init
-exec-once = swww img ~/Pictures/wall/glass.jpg 
+exec-once = swww img ~/Pictures/wall/ledge.jpg 
 #---------------------------------------------------------------------------------------
 
 
@@ -101,7 +101,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 6
-    gaps_out = 15
+    gaps_out = 0
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -143,7 +143,7 @@ animations {
 
     # https://wiki.hyprland.org/Configuring/Animations/
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = myBezier, 0.05, 0.9, 0.1, 1
 
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
@@ -265,7 +265,7 @@ bind = $mainMod, G, exec, github-desktop
 
 # System
 bind = $mainMod, C, killactive, 
-bind = $mainMod, L, exec, swaylock -i ~/Pictures/wall/glass.jpg
+bind = $mainMod, L, exec, swaylock -i ~/Pictures/wall/ledge.jpg
 bind = $mainMod, M, exec, wlogout 
 
 # Tiling
