switch to hyprpaper

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -31,13 +31,10 @@ workspace=2, monitor:HDMI-A-2, default:true
 #---------------------------------------------------------------------------------------
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & dunst
+exec-once = waybar & dunst & hyprpaper
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
 #exec-once = swayidle -w timeout 60 "swaylock -f -i ~/Pictures/glass.jpg"
-
-exec-once = swww init
-exec-once = swww img ~/Pictures/wall/ledge.jpg 
 #---------------------------------------------------------------------------------------
 
 
