wallpaper per workspace support

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,4 +1,5 @@
 preload = ~/Pictures/wall/ledge.jpg
+#preload = ~/Pictures/wall/garden.png
 #if more than one preload is desired then continue to preload other backgrounds
 #preload = /path/to/next_image.png
 # .. more preloads
