--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -300,8 +300,39 @@ bind = SUPER SHIFT, up, movewindow, u
 bind = SUPER SHIFT, down, movewindow, d
 #---------------------------------------------------------------------------------------
 
+#---------------------------------------------------------------------------------------
+# Wallpaper specify
+#$w1 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wall/ledge.jpg"
+#$w3 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wall/garden.png"
+#$w4 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wall/ledge.jpg"
+#$w5 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wall/ledge.jpg"
+#$w6 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wall/ledge.jpg"
+#$w7 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wall/ledge.jpg"
+#$w8 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wall/ledge.jpg"
+#$w9 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wall/ledge.jpg"
+#$w10 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wall/ledge.jpg"
 
+# Wallpaper binds
+#bind = $mainMod, 1, exec, $w1
+#bind = $mainMod, 3, exec, $w3
+#bind = $mainMod, 4, exec, $w4
+#bind = $mainMod, 5, exec, $w5
+#bind = $mainMod, 6, exec, $w6
+#bind = $mainMod, 7, exec, $w7
+#bind = $mainMod, 8, exec, $w8
+#bind = $mainMod, 9, exec, $w9
+#bind = $mainMod, 0, exec, $w10
 
+#bind = $mainMod SHIFT, 1, exec, $w1
+#bind = $mainMod SHIFT, 3, exec, $w3
+#bind = $mainMod SHIFT, 4, exec, $w4
+#bind = $mainMod SHIFT, 5, exec, $w5
+#bind = $mainMod SHIFT, 6, exec, $w6
+#bind = $mainMod SHIFT, 7, exec, $w7
+#bind = $mainMod SHIFT, 8, exec, $w8
+#bind = $mainMod SHIFT, 9, exec, $w9
+#bind = $mainMod SHIFT, 0, exec, $w10
+#---------------------------------------------------------------------------------------
 
 #---------------------------------------------------------------------------------------
 # Switch workspaces with mainMod + [0-9]
