added shufle wallpaper script

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -272,6 +272,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 # Utils
 bind = , Print, exec, grim -g "$(slurp)"
 bind = $mainMod, A, exec, alacritty -e sh -c "alsamixer"
+bind = $mainMod SHIFT, O, exec, ~/.config/hypr/wall.sh
 
 # Modes
 bind = , XF86Calculator, exec, alacritty -e xrandr --output DP-1 --primary --mode 2560x1440 --rate 144
