--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -116,15 +116,16 @@ general {
 #---------------------------------------------------------------------------------------
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
-    rounding = 1
     
+    rounding = 1
     blur {
         enabled = true
-        size = 4
-        passes = 1
+        size = 2
+        passes = 2
     }
 
+    layerrule = blur,waybar
+    layerrule = blur,wofi
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
@@ -146,7 +147,7 @@ animations {
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
+    animation = fade, 1, 1, default
     animation = workspaces, 1, 6, default
 
     #Animated Border
