--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,17 +1,17 @@
-preload = ~/Pictures/wall/ledge.jpg
-#preload = ~/Pictures/wall/garden.png
+preload = ~/Pictures/wall/eva.jpg
+preload = ~/Pictures/wall/rain.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 #preload = /path/to/next_image.png
 # .. more preloads
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = DP-1,~/Pictures/wall/ledge.jpg
+wallpaper = DP-1,~/Pictures/wall/rain.jpg
 #if more than one monitor in use, can load a 2nd image
-wallpaper = HDMI-A-2,~/Pictures/wall/ledge.jpg
+wallpaper = HDMI-A-2,~/Pictures/wall/eva.jpg
 # .. more monitors
 
 #enable splash text rendering over the wallpaper
-splash = true
+splash = false
 
 #fully disable ipc
 # ipc = off
