switch to hyprlock

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -263,7 +263,7 @@ bind = $mainMod, G, exec, github-desktop
 
 # System
 bind = $mainMod, C, killactive, 
-bind = $mainMod, L, exec, swaylock -i ~/Pictures/wall/ledge.jpg
+bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, M, exec, wlogout 
 
 # Tiling
