--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,7 +23,17 @@ monitor=DP-1,2560x1440@144,0x0,1
 monitor=HDMI-A-2,1280x1024@75,2560x0,1
 
 workspace=1, monitor:DP-1, default:true
-workspace=2, monitor:HDMI-A-2, default:true
+workspace=2, monitor:DP-1, default:true
+workspace=3, monitor:DP-1, default:true
+workspace=4, monitor:DP-1, default:true
+workspace=5, monitor:DP-1, default:true
+
+
+workspace=6, monitor:HDMI-A-2, default:true, defaultName:1
+workspace=7, monitor:HDMI-A-2, default:true, defaultName:2
+workspace=8, monitor:HDMI-A-2, default:true, defaultName:3
+workspace=9, monitor:HDMI-A-2, default:true, defaultName:4
+workspace=10, monitor:HDMI-A-2, default:true, defaultName:5
 #---------------------------------------------------------------------------------------
 
 
@@ -343,11 +353,11 @@ bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
 bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $mainMod, code:87, workspace, 6
+bind = $mainMod, code:88, workspace, 7
+bind = $mainMod, code:89, workspace, 8
+bind = $mainMod, code:83, workspace, 9
+bind = $mainMod, code:84, workspace, 10
 #---------------------------------------------------------------------------------------
 
 
@@ -360,11 +370,11 @@ bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
 bind = $mainMod SHIFT, 4, movetoworkspace, 4
 bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, code:87, movetoworkspace, 6
+bind = $mainMod SHIFT, code:88, movetoworkspace, 7
+bind = $mainMod SHIFT, code:89, movetoworkspace, 8
+bind = $mainMod SHIFT, code:83, movetoworkspace, 9
+bind = $mainMod SHIFT, code:84, movetoworkspace, 10
 #---------------------------------------------------------------------------------------
 
 
