--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,18 +22,18 @@
 monitor=DP-1,2560x1440@144,0x0,1
 monitor=HDMI-A-2,1280x1024@75,2560x0,1
 
-workspace=1, monitor:DP-1, default:true
-workspace=2, monitor:DP-1, default:true
-workspace=3, monitor:DP-1, default:true
-workspace=4, monitor:DP-1, default:true
-workspace=5, monitor:DP-1, default:true
+workspace=1, monitor:DP-1, default:true, defaultName:一
+workspace=2, monitor:DP-1, default:true, defaultName:二
+workspace=3, monitor:DP-1, default:true, defaultName:三
+workspace=4, monitor:DP-1, default:true, defaultName:四
+workspace=5, monitor:DP-1, default:true, defaultName:五
 
 
-workspace=6, monitor:HDMI-A-2, default:true, defaultName:1
-workspace=7, monitor:HDMI-A-2, default:true, defaultName:2
-workspace=8, monitor:HDMI-A-2, default:true, defaultName:3
-workspace=9, monitor:HDMI-A-2, default:true, defaultName:4
-workspace=10, monitor:HDMI-A-2, default:true, defaultName:5
+workspace=6, monitor:HDMI-A-2, default:true, defaultName:一
+workspace=7, monitor:HDMI-A-2, default:true, defaultName:二
+workspace=8, monitor:HDMI-A-2, default:true, defaultName:三
+workspace=9, monitor:HDMI-A-2, default:true, defaultName:四
+workspace=10, monitor:HDMI-A-2, default:true, defaultName:五
 #---------------------------------------------------------------------------------------
 
 
